# tcp-echo

./: .gitignore  .helmignore  Cargo.toml  Chart.yaml  Dockerfile  deny.toml  k8s-iptables.yml  k8s.yml  values.yaml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
k8s/: client.yml  server.yml
src/: main.rs
templates/: client.yml  server.yml
