[package]
name = "tcp-echo"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.6"
futures = "0.3"
http = "0.2"
rand = { version = "0.7", features = ["small_rng"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "0.3"
features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "stream",
    "signal",
    "time"
]
