[package]
name = "tcp-echo"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
bytes = "1"
futures = { version = "0.3", default-features =false }
http = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1"
features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time"
]
