[package]
name = "tcp-echo"
version = "0.1.0"
authors = ["Oliver Gould <ver@buoyant.io>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
bytes = "1"
futures = { version = "0.3", default-features = false }
http = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
tracing = "0.1"

[dependencies.clap]
version = "3"
default-features = false
features = ["cargo", "derive", "env", "std"]

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["fmt", "smallvec"]
